# Erathia

./: .gitignore  .gitmodules  BIOME_SYSTEM.md  Checklist.md  MainGame.tscn  README.md  TERRAIN_REGENERATION_GUIDE.md  VOXEL_GENERATOR_INTEGRATION.md  VOXEL_MIGRATION.md  export_presets.cfg  icon.svg.import  main.tscn  plan.md  project.godot  test_native_call.gd  test_native_call.gd.uid  test_native_extension.tscn  test_native_generator.gd  test_native_generator.gd.uid  test_native_generator.tscn  test_native_vegetation.gd  test_native_vegetation.gd.uid  test_native_vegetation.tscn  test_voxel_scene.tscn  verify_gdextension.gd  verify_gdextension.gd.uid  verify_gdextension.tscn
_ai/: BIOME_SYSTEM_DIAGNOSTIC.md  GDEXTENSION_BUILD_COMPLETE.md  GDEXTENSION_BUILD_SUCCESS.md  GDEXTENSION_BUILD_VERIFICATION.md  GPU_OPTIMIZATION_IMPLEMENTATION.md  GPU_SYNCHRONIZATION_FIXES.md  GPU_SYNCHRONIZATION_FIXES_IMPLEMENTATION.md  GPU_VEGETATION_VERIFICATION_FIXES.md  NATIVE_TERRAIN_FIXES_IMPLEMENTATION.md  NATIVE_TERRAIN_IMPLEMENTATION.md  NATIVE_TERRAIN_VOXEL_INTEGRATION.md  NATIVE_VEGETATION_DISPATCHER_IMPLEMENTATION.md  NATIVE_VOXEL_GENERATOR_IMPLEMENTATION.md
_assets/: world_map.png.import
_building/: auto_test_build_mode.gd  auto_test_build_mode.gd.uid  snap_system.gd  snap_system.gd.uid  test_snap_system.tscn
_core/: dev_console.gd  dev_console.gd.uid  game_settings.gd  game_settings.gd.uid  input_setup.gd  input_setup.gd.uid  node_inspector.gd  node_inspector.gd.uid  performance_overlay.gd  performance_overlay.gd.uid  renderer_fallback.gd  renderer_fallback.gd.uid  world_init_manager.gd  world_init_manager.gd.uid  world_regenerator.gd  world_regenerator.gd.uid  world_seed_manager.gd  world_seed_manager.gd.uid  xray_manager.gd  xray_manager.gd.uid
_engine/: mining_system.gd  mining_system.gd.uid  terrain_edit_system.gd  terrain_edit_system.gd.uid
_player/: player.gd  player.gd.uid  player.tscn  player_mining.gd  player_mining.gd.uid  player_voxel.tscn  tool_holder.gd  tool_holder.gd.uid  underwater_post.tscn
_rpg/: inventory.gd  inventory.gd.uid
_ui/: build_piece_card.gd  build_piece_card.gd.uid  build_piece_card.tscn  build_ui.gd  build_ui.gd.uid  build_ui.tscn  cheat_indicators.gd  cheat_indicators.gd.uid  (+32 more)
addons/erathia_terrain_native/: .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_macos.sh  build_windows.bat  erathia_terrain.gdextension  erathia_terrain.gdextension.uid
addons/erathia_terrain_native/src/: native_terrain_generator.cpp  native_terrain_generator.h  native_vegetation_dispatcher.cpp  native_vegetation_dispatcher.h  register_types.cpp  register_types.h  test_native_class.cpp  test_native_class.h
(+247 files in other folders)
